# multi-speaker-diarization-with-adaptive-boundary-refinement

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_quick_experiment.py
configs/: ablation.yaml  default.yaml  quick_experiment.yaml  test.yaml
scripts/: evaluate.py  predict.py  train.py
src/multi_speaker_diarization_with_adaptive_boundary_refinement/: __init__.py
src/multi_speaker_diarization_with_adaptive_boundary_refinement/evaluation/: __init__.py  analysis.py  metrics.py
src/multi_speaker_diarization_with_adaptive_boundary_refinement/models/: __init__.py  components.py  model.py
src/multi_speaker_diarization_with_adaptive_boundary_refinement/training/: __init__.py  trainer.py
src/multi_speaker_diarization_with_adaptive_boundary_refinement/utils/: __init__.py  config.py
test_results/: training_history.json
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
